<?xml version="1.0" encoding="UTF-8"?>
<com.company.app.elements.mainactivity.PagerView1 xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"  android:background="#FFFFFFFF" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/pager_view1">
   <com.company.app.elements.mainactivity.StaticList1 xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFFFF" android:fillViewport="true" android:scrollbars="vertical" android:layout_marginStart="0dp" android:layout_marginTop="0dp" app:layout_heightPercent="89.789998531342%" android:layout_height="0dp" android:layout_width="match_parent" android:id="@+id/static_list1">
      <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/static_list1_inner">
         <com.company.app.elements.mainactivity.StaticListTile1 android:elevation="5dp" android:background="#FFFFFFFF" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile13">
            <android.support.v7.widget.AppCompatImageView android:scaleType="centerInside" android:background="#FFFFFFFF" android:src="@drawable/icons8_windows_phone_store_48px" app:layout_marginTopPercent="15.000000596046%" app:layout_marginStartPercent="0%" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" app:layout_widthPercent="17.000000178814%" android:layout_width="0dp" android:id="@+id/image_view16"/>
            <android.support.v7.widget.AppCompatImageButton android:background="#FFFFFFFF" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:src="@drawable/icons8_right_48px_3" android:scaleType="centerInside" app:layout_marginStartPercent="82.489997148514%" app:layout_marginTopPercent="15.000000596046%" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" app:layout_widthPercent="15.000000596046%" android:layout_width="0dp" android:id="@+id/image_button1"/>
            <android.support.v7.widget.AppCompatTextView android:ellipsize="end" android:maxLines="1" android:letterSpacing="0" android:lineSpacingMultiplier="1" android:textColor="#FF000000" android:gravity="center|start" android:textSize="22sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:cropToPadding="true" android:background="#00000000" android:text="@string/text_view1_text" android:outlineProvider="bounds" app:layout_marginTopPercent="5.000000074506%" app:layout_marginStartPercent="17.000000178814%" app:layout_heightPercent="89.999997615814%" android:layout_height="0dp" app:layout_widthPercent="50%" android:layout_width="0dp" android:id="@+id/text_view11"/>
         </com.company.app.elements.mainactivity.StaticListTile1>
         <com.company.app.elements.mainactivity.StaticListTile2 android:background="#FFFFFFFF" android:elevation="5dp" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile2">
            <android.support.v7.widget.AppCompatImageView android:src="@drawable/icons8_ubuntu_48px_1" android:scaleType="centerInside" android:background="#FFFFFFFF" app:layout_marginTopPercent="15.000000596046%" app:layout_marginStartPercent="0%" app:layout_widthPercent="17.000000178814%" android:layout_width="0dp" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_view21"/>
            <android.support.v7.widget.AppCompatImageButton android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:src="@drawable/icons8_right_48px_3" android:scaleType="centerInside" android:background="#FFFFFFFF" app:layout_marginTopPercent="15.000000596046%" app:layout_marginStartPercent="82.489997148514%" app:layout_widthPercent="15.000000596046%" android:layout_width="0dp" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button22"/>
            <android.support.v7.widget.AppCompatTextView android:textColor="#FF000000" android:cropToPadding="true" android:gravity="center|start" android:ellipsize="end" android:maxLines="1" android:letterSpacing="0" android:lineSpacingMultiplier="1" android:textSize="22sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:background="#00000000" android:text="@string/text_view2_text4" android:outlineProvider="bounds" app:layout_marginStartPercent="17.000000178814%" app:layout_marginTopPercent="5.000000074506%" app:layout_heightPercent="89.999997615814%" android:layout_height="0dp" app:layout_widthPercent="50%" android:layout_width="0dp" android:id="@+id/text_view22"/>
         </com.company.app.elements.mainactivity.StaticListTile2>
         <com.company.app.elements.mainactivity.StaticListTile3 android:background="#FFFFFFFF" android:elevation="5dp" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile31">
            <android.support.v7.widget.AppCompatImageView android:background="#FFFFFFFF" android:src="@drawable/icons8_mac_client_48px" android:scaleType="centerInside" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="15.000000596046%" app:layout_widthPercent="17.000000178814%" android:layout_width="0dp" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_view32"/>
            <android.support.v7.widget.AppCompatImageButton android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:scaleType="centerInside" android:background="#FFFFFFFF" android:src="@drawable/icons8_right_48px_3" app:layout_marginStartPercent="82.489997148514%" app:layout_marginTopPercent="15.000000596046%" app:layout_widthPercent="15.000000596046%" android:layout_width="0dp" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button31"/>
            <android.support.v7.widget.AppCompatTextView android:background="#00000000" android:cropToPadding="true" android:textSize="22sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:gravity="center|start" android:ellipsize="end" android:maxLines="1" android:textColor="#FF000000" android:letterSpacing="0" android:lineSpacingMultiplier="1" android:text="@string/text_view3_text1" android:outlineProvider="bounds" app:layout_marginTopPercent="10.000000149012%" app:layout_marginStartPercent="17.000000178814%" app:layout_heightPercent="89.999997615814%" android:layout_height="0dp" app:layout_widthPercent="50%" android:layout_width="0dp" android:id="@+id/text_view32"/>
         </com.company.app.elements.mainactivity.StaticListTile3>
         <com.company.app.elements.mainactivity.StaticListTile4 android:background="#FFFFFFFF" android:elevation="5dp" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile4">
            <android.support.v7.widget.AppCompatImageView android:background="#FFFFFFFF" android:scaleType="centerInside" android:src="@drawable/eclipse_icon" app:layout_marginTopPercent="15.000000596046%" app:layout_marginStartPercent="0%" app:layout_widthPercent="17.000000178814%" android:layout_width="0dp" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_view41"/>
            <android.support.v7.widget.AppCompatImageButton android:background="#FFFFFFFF" android:scaleType="centerInside" android:src="@drawable/icons8_right_48px_3" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" app:layout_marginStartPercent="82.489997148514%" app:layout_marginTopPercent="15.000000596046%" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" app:layout_widthPercent="15.000000596046%" android:layout_width="0dp" android:id="@+id/image_button4"/>
            <android.support.v7.widget.AppCompatTextView android:gravity="center|start" android:letterSpacing="0" android:textColor="#FF000000" android:textSize="22sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:lineSpacingMultiplier="1" android:background="#00000000" android:cropToPadding="true" android:ellipsize="end" android:maxLines="1" android:text="@string/text_view4_text" android:outlineProvider="bounds" app:layout_marginStartPercent="17.000000178814%" app:layout_marginTopPercent="10.000000149012%" app:layout_heightPercent="89.999997615814%" android:layout_height="0dp" app:layout_widthPercent="50%" android:layout_width="0dp" android:id="@+id/text_view41"/>
         </com.company.app.elements.mainactivity.StaticListTile4>
         <com.company.app.elements.mainactivity.StaticListTile5 android:background="#FFFFFFFF" android:elevation="5dp" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile51">
            <android.support.v7.widget.AppCompatImageView android:background="#FFFFFFFF" android:scaleType="centerInside" android:src="@drawable/dy1wj_qeh" app:layout_marginTopPercent="15.000000596046%" app:layout_marginStartPercent="0%" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" app:layout_widthPercent="17.000000178814%" android:layout_width="0dp" android:id="@+id/image_view51"/>
            <android.support.v7.widget.AppCompatImageButton android:background="#FFFFFFFF" android:scaleType="centerInside" android:src="@drawable/icons8_right_48px_3" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" app:layout_marginTopPercent="15.000000596046%" app:layout_marginStartPercent="82.489997148514%" app:layout_widthPercent="15.000000596046%" android:layout_width="0dp" app:layout_heightPercent="69.999998807907%" android:layout_height="0dp" android:id="@+id/image_button51"/>
            <android.support.v7.widget.AppCompatTextView android:letterSpacing="0" android:textColor="#FF000000" android:background="#00000000" android:ellipsize="end" android:maxLines="1" android:textSize="22sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:lineSpacingMultiplier="1" android:gravity="center|start" android:cropToPadding="true" android:text="@string/text_view5_text" android:outlineProvider="bounds" app:layout_marginStartPercent="17.000000178814%" app:layout_marginTopPercent="10.000000149012%" app:layout_heightPercent="89.999997615814%" android:layout_height="0dp" app:layout_widthPercent="50%" android:layout_width="0dp" android:id="@+id/text_view52"/>
         </com.company.app.elements.mainactivity.StaticListTile5>
      </LinearLayout>
   </com.company.app.elements.mainactivity.StaticList1>
   <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto" android:background="#FFFFFFFF" ads:adUnitId="ca-app-pub-6875663397521117/5407172994" ads:adSize="BANNER" android:layout_marginStart="0dp" app:layout_marginTopPercent="89.999997615814%" android:layout_width="match_parent" app:layout_heightPercent="10.000000149012%" android:layout_height="0dp" android:id="@+id/ad_mob_banner_ad123"/>
</com.company.app.elements.mainactivity.PagerView1>
