<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"  android:background="#FFFFFFFF" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/ubuntu">
   <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android" app:title="Ubuntu" app:titleTextColor="#FFFFFFFF" android:textSize="20sp" android:fontFamily="sans-serif-condensed" android:textStyle="normal" android:background="#FF14B165" android:theme="@style/app_bar_style13" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/app_bar1"/>
   <ScrollView android:fillViewport="true" android:layout_height="match_parent" android:layout_width="match_parent">
      <android.support.percent.PercentRelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
         <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto" android:background="#FFFFFFFF" ads:adUnitId="ca-app-pub-3940256099942544/2934735716" ads:adSize="BANNER" app:layout_marginStartPercent="0%" app:layout_marginTopPercent="89.999997615814%" app:layout_heightPercent="10.000000149012%" android:layout_height="0dp" android:layout_width="match_parent" android:id="@+id/ad_mob_banner_ad19"/>
         <com.company.app.elements.ubuntuactivity.ScrollView1 android:background="#FFFFFFFF" android:fillViewport="true" android:scrollbars="vertical" android:layout_marginStart="0dp" android:layout_marginTop="0dp" app:layout_heightPercent="89.999997615814%" android:layout_height="0dp" android:layout_width="match_parent" android:id="@+id/scroll_view19">
            <android.support.percent.PercentRelativeLayout android:layout_height="match_parent" android:layout_width="wrap_content">
               <com.company.app.elements.ubuntuactivity.StaticList1 xmlns:android="http://schemas.android.com/apk/res/android" android:background="#FFFFFFFF" android:fillViewport="true" android:scrollbars="vertical" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/static_list14">
                  <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/static_list14_inner">
                     <com.company.app.elements.ubuntuactivity.StaticListTile1 android:background="#FFFFFFFF" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile12">
                        <android.support.v7.widget.AppCompatImageView android:background="#FFFFFFFF" android:scaleType="centerInside" android:src="@drawable/icons8_keyboard_48px" app:layout_marginTopPercent="10.000000149012%" app:layout_marginStartPercent="3.339999914169%" app:layout_widthPercent="10.000000149012%" android:layout_width="0dp" app:layout_heightPercent="80.000001192093%" android:layout_height="0dp" android:id="@+id/image_view110"/>
                        <android.support.v7.widget.AppCompatTextView android:ellipsize="end" android:maxLines="1" android:textSize="18sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:cropToPadding="true" android:gravity="center|start" android:background="#00000000" android:textColor="#FF000000" android:lineSpacingMultiplier="1" android:letterSpacing="0" android:text="@string/text_view1_text2" android:outlineProvider="bounds" app:layout_marginStartPercent="16.390000283718%" app:layout_marginTopPercent="5.99999986589%" app:layout_widthPercent="55.559998750687%" android:layout_width="0dp" app:layout_heightPercent="87.999999523163%" android:layout_height="0dp" android:id="@+id/text_view13"/>
                        <android.support.v7.widget.AppCompatImageButton android:src="@drawable/icons8_right_48px_1" android:background="#FFFFFFFF" android:scaleType="centerInside" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" app:layout_marginTopPercent="11.999999731779%" app:layout_marginStartPercent="86.890000104904%" app:layout_heightPercent="77.999997138977%" android:layout_height="0dp" app:layout_widthPercent="10.170000046492%" android:layout_width="0dp" android:id="@+id/image_button13"/>
                     </com.company.app.elements.ubuntuactivity.StaticListTile1>
                     <com.company.app.elements.ubuntuactivity.StaticListTile2 android:background="#FFFFFFFF" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile21">
                        <android.support.v7.widget.AppCompatImageView android:scaleType="centerInside" android:src="@drawable/icons8_ubuntu_48px_3" android:background="#FFFFFFFF" app:layout_marginStartPercent="3.339999914169%" app:layout_marginTopPercent="10.000000149012%" app:layout_heightPercent="80.000001192093%" android:layout_height="0dp" app:layout_widthPercent="10.000000149012%" android:layout_width="0dp" android:id="@+id/image_view24"/>
                        <android.support.v7.widget.AppCompatTextView android:cropToPadding="true" android:textColor="#FF000000" android:letterSpacing="0" android:textSize="18sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:lineSpacingMultiplier="1" android:background="#00000000" android:ellipsize="end" android:maxLines="1" android:gravity="center|start" android:text="@string/text_view2_text3" android:outlineProvider="bounds" app:layout_marginStartPercent="16.390000283718%" app:layout_marginTopPercent="5.99999986589%" app:layout_widthPercent="55.559998750687%" android:layout_width="0dp" app:layout_heightPercent="87.999999523163%" android:layout_height="0dp" android:id="@+id/text_view24"/>
                        <android.support.v7.widget.AppCompatImageButton android:scaleType="centerInside" android:background="#FFFFFFFF" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:src="@drawable/icons8_right_48px_1" app:layout_marginStartPercent="86.890000104904%" app:layout_marginTopPercent="11.999999731779%" app:layout_heightPercent="77.999997138977%" android:layout_height="0dp" app:layout_widthPercent="10.170000046492%" android:layout_width="0dp" android:id="@+id/image_button2"/>
                     </com.company.app.elements.ubuntuactivity.StaticListTile2>
                     <com.company.app.elements.ubuntuactivity.StaticListTile3 android:background="#FFFFFFFF" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile3">
                        <android.support.v7.widget.AppCompatImageView android:src="@drawable/icons8_console_64px" android:scaleType="centerInside" android:background="#FFFFFFFF" app:layout_marginStartPercent="3.339999914169%" app:layout_marginTopPercent="10.000000149012%" app:layout_heightPercent="80.000001192093%" android:layout_height="0dp" app:layout_widthPercent="10.000000149012%" android:layout_width="0dp" android:id="@+id/image_view33"/>
                        <android.support.v7.widget.AppCompatTextView android:textColor="#FF000000" android:textSize="18sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:gravity="center|start" android:background="#00000000" android:cropToPadding="true" android:ellipsize="end" android:maxLines="1" android:lineSpacingMultiplier="1" android:letterSpacing="0" android:text="@string/text_view3_text" android:outlineProvider="bounds" app:layout_marginStartPercent="16.390000283718%" app:layout_marginTopPercent="5.99999986589%" app:layout_heightPercent="87.999999523163%" android:layout_height="0dp" app:layout_widthPercent="55.559998750687%" android:layout_width="0dp" android:id="@+id/text_view3"/>
                        <android.support.v7.widget.AppCompatImageButton android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:src="@drawable/icons8_right_48px_1" android:background="#FFFFFFFF" android:scaleType="centerInside" app:layout_marginStartPercent="86.890000104904%" app:layout_marginTopPercent="11.999999731779%" app:layout_widthPercent="10.170000046492%" android:layout_width="0dp" app:layout_heightPercent="77.999997138977%" android:layout_height="0dp" android:id="@+id/image_button3"/>
                     </com.company.app.elements.ubuntuactivity.StaticListTile3>
                     <com.company.app.elements.ubuntuactivity.StaticListTile4 android:background="#FFFFFFFF" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile43">
                        <android.support.v7.widget.AppCompatImageView android:background="#FFFFFFFF" android:src="@drawable/icons8_ctrl_50px" android:scaleType="centerInside" app:layout_marginTopPercent="10.000000149012%" app:layout_marginStartPercent="3.339999914169%" app:layout_widthPercent="10.000000149012%" android:layout_width="0dp" app:layout_heightPercent="80.000001192093%" android:layout_height="0dp" android:id="@+id/image_view42"/>
                        <android.support.v7.widget.AppCompatTextView android:textSize="18sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:textColor="#FF000000" android:letterSpacing="0" android:cropToPadding="true" android:lineSpacingMultiplier="1" android:background="#00000000" android:ellipsize="end" android:maxLines="1" android:gravity="center|start" android:text="@string/text_view4_text1" android:outlineProvider="bounds" app:layout_marginTopPercent="5.99999986589%" app:layout_marginStartPercent="16.390000283718%" app:layout_widthPercent="55.559998750687%" android:layout_width="0dp" app:layout_heightPercent="87.999999523163%" android:layout_height="0dp" android:id="@+id/text_view4"/>
                        <android.support.v7.widget.AppCompatImageButton android:background="#FFFFFFFF" android:src="@drawable/icons8_right_48px_1" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:scaleType="centerInside" app:layout_marginTopPercent="11.999999731779%" app:layout_marginStartPercent="86.890000104904%" app:layout_widthPercent="10.170000046492%" android:layout_width="0dp" app:layout_heightPercent="77.999997138977%" android:layout_height="0dp" android:id="@+id/image_button42"/>
                     </com.company.app.elements.ubuntuactivity.StaticListTile4>
                     <com.company.app.elements.ubuntuactivity.StaticListTile5 android:background="#FFFFFFFF" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/static_list_tile52">
                        <android.support.v7.widget.AppCompatImageView android:src="@drawable/icons8_shift_48px" android:background="#FFFFFFFF" android:scaleType="centerInside" app:layout_marginStartPercent="3.339999914169%" app:layout_marginTopPercent="10.000000149012%" app:layout_heightPercent="80.000001192093%" android:layout_height="0dp" app:layout_widthPercent="10.000000149012%" android:layout_width="0dp" android:id="@+id/image_view52"/>
                        <android.support.v7.widget.AppCompatTextView android:background="#00000000" android:textSize="18sp" android:fontFamily="sans-serif-condensed-light" android:textStyle="normal" android:textColor="#FF000000" android:cropToPadding="true" android:gravity="center|start" android:lineSpacingMultiplier="1" android:letterSpacing="0" android:ellipsize="end" android:maxLines="1" android:text="@string/text_view5_text1" android:outlineProvider="bounds" app:layout_marginStartPercent="16.390000283718%" app:layout_marginTopPercent="5.99999986589%" app:layout_widthPercent="55.559998750687%" android:layout_width="0dp" app:layout_heightPercent="87.999999523163%" android:layout_height="0dp" android:id="@+id/text_view5"/>
                        <android.support.v7.widget.AppCompatImageButton android:background="#FFFFFFFF" android:cropToPadding="true" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:paddingTop="5dp" android:src="@drawable/icons8_right_48px_1" android:scaleType="centerInside" app:layout_marginTopPercent="11.999999731779%" app:layout_marginStartPercent="86.890000104904%" app:layout_widthPercent="10.170000046492%" android:layout_width="0dp" app:layout_heightPercent="77.999997138977%" android:layout_height="0dp" android:id="@+id/image_button5"/>
                     </com.company.app.elements.ubuntuactivity.StaticListTile5>
                  </LinearLayout>
               </com.company.app.elements.ubuntuactivity.StaticList1>
            </android.support.percent.PercentRelativeLayout>
         </com.company.app.elements.ubuntuactivity.ScrollView1>
      </android.support.percent.PercentRelativeLayout>
   </ScrollView>
</LinearLayout>
